--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 	maven { url 'https://repo.spring.io/snapshot' }
 }
 
+buildDir = 'target'
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
